--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,6 +17,16 @@
     button {
       padding: 8px 16px;
       margin-bottom: 20px;
+    }
+    .site-section {
+      margin-bottom: 40px;
+    }
+    .site-header {
+      font-size: 1.4rem;
+      font-weight: bold;
+      margin: 20px 0 10px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
     }
     .products-grid {
       display: grid;
@@ -59,58 +68,82 @@
 </head>
 <body>
   <h2>Product Search</h2>
-  <input id="urlInput" type="text" placeholder="Enter a collection URL">
-  <button onclick="scrape()">Fetch Products</button>
+  <input id="url1" type="text" placeholder="Enter first collection URL">
+  <input id="url2" type="text" placeholder="Enter second collection URL">
+  <input id="url3" type="text" placeholder="Enter third collection URL">
+  <input id="url4" type="text" placeholder="Enter fourth collection URL">
+  <button onclick="scrapeMulti()">Fetch Products</button>
 
-  <div id="products" class="products-grid"></div>
+  <div id="results"></div>
 
   <script>
-    async function scrape() {
-      const url = document.getElementById("urlInput").value.trim();
-      if (!url) return;
+    async function scrapeMulti() {
+      const urls = [url1.value, url2.value, url3.value, url4.value].map(u => u.trim()).filter(Boolean);
+      if (urls.length === 0) return alert("Please enter at least one URL.");
 
-      const productsDiv = document.getElementById("products");
-      productsDiv.innerHTML = "Loading...";
+      const resultsDiv = document.getElementById("results");
+      resultsDiv.innerHTML = "Loading...";
 
       try {
-        const res = await fetch(`http://localhost:8000/scrape?url=${encodeURIComponent(url)}`);
-        const data = await res.json();
+        const res = await fetch("http://localhost:8000/scrape-multi", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(urls)
+        });
+        const allData = await res.json();
+        resultsDiv.innerHTML = "";
 
-        if (!data.products || data.products.length === 0) {
-          productsDiv.innerHTML = "No products found.";
-          return;
-        }
+        (allData.results || []).forEach(site => {
+          const siteSection = document.createElement("div");
+          siteSection.className = "site-section";
 
-        productsDiv.innerHTML = "";
+          const siteHeader = document.createElement("div");
+          const domain = new URL(site.url).hostname.replace("www.", "");
+          siteHeader.className = "site-header";
+          siteHeader.textContent = domain;
+          siteSection.appendChild(siteHeader);
 
-        data.products.forEach(p => {
-          const card = document.createElement("div");
-          card.className = "product-card";
+          const grid = document.createElement("div");
+          grid.className = "products-grid";
 
-          const img = document.createElement("img");
-          img.src = p.image || "https://via.placeholder.com/200x200?text=No+Image";
-          card.appendChild(img);
+          if (!site.products || site.products.length === 0) {
+            const noData = document.createElement("p");
+            noData.textContent = "No products found.";
+            siteSection.appendChild(noData);
+          } else {
+            site.products.forEach(p => {
+              const card = document.createElement("div");
+              card.className = "product-card";
 
-          const title = document.createElement("h3");
-          title.textContent = p.title || "No title";
-          card.appendChild(title);
+              const img = document.createElement("img");
+              img.src = p.image || "https://via.placeholder.com/200x200?text=No+Image";
+              card.appendChild(img);
 
-          const price = document.createElement("div");
-          price.className = "price";
-          price.textContent = p.price || "Price not available";
-          card.appendChild(price);
+              const title = document.createElement("h3");
+              title.textContent = p.title || "No title";
+              card.appendChild(title);
 
-          const link = document.createElement("a");
-          link.href = p.link;
-          link.target = "_blank";
-          link.textContent = "View Product";
-          card.appendChild(link);
+              const price = document.createElement("div");
+              price.className = "price";
+              price.textContent = p.price || "Price not available";
+              card.appendChild(price);
 
-          productsDiv.appendChild(card);
+              const link = document.createElement("a");
+              link.href = p.link;
+              link.target = "_blank";
+              link.textContent = "View Product";
+              card.appendChild(link);
+
+              grid.appendChild(card);
+            });
+            siteSection.appendChild(grid);
+          }
+
+          resultsDiv.appendChild(siteSection);
         });
       } catch (err) {
-        productsDiv.innerHTML = "Error fetching products.";
         console.error(err);
+        resultsDiv.innerHTML = "Error fetching products.";
       }
     }
   </script>
